css/adoc.css
/* Reduced & modified default Asciidoctor default stylesheet */

p, ol, ul, dl, hr, table, .listingblock, .imageblock, .sidebarblock {
    margin-bottom: 0.5em;
}
.listingblock {
    overflow-x: auto;
}

img, object, svg, video {
    display: inline-block;
    vertical-align: middle;
    max-width: 100%;
    height: auto;
}

html {
    font-family: "EB Garamond", serif;
    font-size: 22px;
    line-height: 1.5em;
}

p {
    hyphens: auto;
    -webkit-hyphens: auto;
    text-align: justify;
}

body {
    background: white;
    color: black;
}

h1, h2, h3,
.sidebarblock>.content>.title {
    font-family: "Open Sans", sans-serif;
    color: #ba3925;
    text-rendering: optimizeLegibility;
    line-height: 1em
}
.listingblock>.title,
.olist>.title {
    line-height: 1.45;
    color: #7a2518;
    font-style: italic;
    font-weight: 400;
    margin-top: 0;
    margin-bottom: .25em;
}
h1 {
    font-size: 1.5em;
    margin-top: 1em;
    margin-bottom: .5em;
}
h2, h3, .sidebarblock>.content>.title {
    font-size: 1.5rem;
    margin-top: 2rem;
    margin-bottom: .5rem;
}
.sidebarblock>.content>.title {
    color: #7a2518;
    margin-top: 0;
    text-align: center;
}

.sectionbody {
    padding-bottom: 0.5em;
}

ol, ul, dd {
    margin-left: 1.5em;
}
ul {
    list-style-type: circle;
}
dl dt {
    font-weight: bold;
}
ol>li p, ul>li p, ul dd, ol dd, .olist .olist, .ulist .ulist, .ulist .olist, .olist .ulist {
    margin-bottom: .5em;
}

hr {
    border: solid #dddddf;
    border-width: 1px 0 0;
    height: 0;
}

code,
pre {
    font-family: "JetBrains Mono", monospace;
}
code, .listingblock>.content>pre:not(.highlight) {
    font-variant-ligatures: none;
    color: rgba(0, 0, 0, .9);
    font-size: 0.75em;
    line-height: 1.125em;
}
p>code {
    white-space: nowrap;
}

table {
    background: #fff;
    border: solid 1px #dedede
}
table thead,
table tfoot {
    background: #f7f8f7
}
table thead tr th,
table thead tr td,
table tfoot tr th,
table tfoot tr td {
    padding: .5em .625em .625em;
    font-size: inherit;
    text-align: left;
}
table tr th,
table tr td {
    padding: .5625em .625em;
    font-size: inherit;
}
table tr.even,
table tr.alt {
    background: #f8f8f7;
}
table thead tr th,
table tfoot tr th,
table tbody tr td,
table tr td,
table tfoot tr td {
    display: table-cell;
    line-height: 1.5;
}
table.tableblock {
    max-width: 100%;
    border-collapse: separate;
}
p.tableblock:last-child {
    margin-bottom: 0;
}
td.tableblock>.content>:last-child {
    margin-bottom: -1em;
}
td.tableblock>.content>:last-child.sidebarblock {
    margin-bottom: 0;
}
table.tableblock,
th.tableblock,
td.tableblock {
    border: 0 solid #dedede
}
table.grid-all>thead>tr>.tableblock,
table.grid-all>tbody>tr>.tableblock {
    border-width: 0 1px 1px 0
}
table.grid-all>tfoot>tr>.tableblock {
    border-width: 1px 1px 0 0
}
table.grid-cols>*>tr>.tableblock {
    border-width: 0 1px 0 0
}
table.grid-rows>thead>tr>.tableblock,
table.grid-rows>tbody>tr>.tableblock {
    border-width: 0 0 1px
}
table.grid-rows>tfoot>tr>.tableblock {
    border-width: 1px 0 0
}
table.grid-all>*>tr>.tableblock:last-child,
table.grid-cols>*>tr>.tableblock:last-child {
    border-right-width: 0
}
table.grid-all>tbody>tr:last-child>.tableblock,
table.grid-all>thead:last-child>tr>.tableblock,
table.grid-rows>tbody>tr:last-child>.tableblock,
table.grid-rows>thead:last-child>tr>.tableblock {
    border-bottom-width: 0
}
table.frame-all {
    border-width: 1px
}
table.frame-sides {
    border-width: 0 1px
}
table.frame-topbot,
table.frame-ends {
    border-width: 1px 0
}
table.stripes-all tr,
table.stripes-odd tr:nth-of-type(odd),
table.stripes-even tr:nth-of-type(even),
table.stripes-hover tr:hover {
    background: #f8f8f7
}
th.halign-left,
td.halign-left {
    text-align: left
}
th.halign-right,
td.halign-right {
    text-align: right
}
th.halign-center,
td.halign-center {
    text-align: center
}
th.valign-top,
td.valign-top {
    vertical-align: top
}
th.valign-bottom,
td.valign-bottom {
    vertical-align: bottom
}
th.valign-middle,
td.valign-middle {
    vertical-align: middle
}
table thead th,
table tfoot th {
    font-weight: bold
}
tbody tr th {
    display: table-cell;
    line-height: 1.6;
    background: #f7f8f7
}
tbody tr th,
tbody tr th p,
tfoot tr th,
tfoot tr th p {
    color: rgba(0, 0, 0, .8);
    font-weight: bold
}
p.tableblock>code:only-child {
    background: none;
    padding: 0
}
p.tableblock {
    font-size: 1em
}

kbd {
    font-family: "JetBrains Mono", monospace;
    font-variant-ligatures: none;
    display: inline-block;
    color: rgba(0, 0, 0, .8);
    font-size: .65em;
    line-height: 1.45;
    background: #f7f7f7;
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: 0 1px 0 rgba(0, 0, 0, .2), 0 0 0 0.1em #fff inset;
    margin: 0 .15em;
    padding: .2em .5em;
    vertical-align: middle;
    position: relative;
    top: -.1em;
    white-space: nowrap;
}

a {
    text-decoration-color: #2156a5;
    color:black;
}
a.bare {
    word-break: break-all;
}
a:hover, a:focus {
    color: #2156a5;
}

.sidebarblock {
    border-style: solid;
    border-width: 1px;
    border-color: #dbdbd6;
    padding: 1em;
    background: #f3f3f2;
    border-radius: 4px;
}
.sidebarblock>.content>:last-child>:last-child {
    margin-bottom: 0;
}

.hdlist>table {
    border: 0;
}
td.hdlist1,
td.hdlist2 {
    vertical-align: top;
    padding: 0 .625em
}
td.hdlist1 {
    font-weight: bold;
    padding-bottom: 1.25em
}
span.icon > .fa {
    cursor: default;
}
.admonitionblock>table {
    border: 0;
    border-collapse: separate;
    width: 100%;
}
.admonitionblock td.icon .icon-note::before {
    content: "\f05a";
    color: #19407c;
}
.admonitionblock td.icon .icon-tip:before {
    content: "\f0eb";
    text-shadow: 1px 1px 2px rgba(155, 155, 0, .8);
    color: #111;
}
.admonitionblock td.icon .icon-warning:before {
    content: "\f071";
    color: #bf6900;
}
.admonitionblock td.icon .icon-caution:before {
    content: "\f06d";
    color: #bf3400;
}
.admonitionblock td.icon .icon-important:before {
    content: "\f06a";
    color: #bf0000;
}
.admonitionblock td.icon [class^="fa icon-"] {
    font-size: 2.5em;
    cursor: default;
}
.admonitionblock>table td.icon {
    text-align: center;
    width: 4em;
}
.admonitionblock>table td.content {
    padding-left: 1em;
    padding-right: 1em;
    border-left: 1px solid #dddddf;
}

.fa {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
}

.listingblock>.content>pre:not(.highlight) {
    background: #f7f7f8;
}
table.linenotable {
    border-collapse: separate;
    border: 0;
    margin-bottom: 0;
    background: none;
}
table.linenotable td.linenos {
    border-right: 1px solid currentColor;
    opacity: .35;
    padding-right: .5em;
}
table.linenotable td.code {
    padding-left: .75em;
}
.colist>table {
    border: 0;
}
.literalblock+.colist,
.listingblock+.colist {
    margin-top: -.5rem
}
.colist td:not([class]):first-child {
    padding: .4rem .75rem 0;
    line-height: 1;
    vertical-align: top
}
.colist td:not([class]):first-child img {
    max-width: none
}
.colist td:not([class]):last-child {
    padding: .25rem 0
}
.conum[data-value] {
    display: inline-block;
    color: #fff!important;
    background: rgba(0, 0, 0, .8);
    border-radius: 100px;
    text-align: center;
    font-size: 0.8rem;
    width: 1.2rem;
    height: 1.2rem;
    line-height: 1.2rem;
    font-family: "JetBrains Mono", serif;
    font-style: normal;
    font-weight: bold;
}
.conum[data-value] * {
    color: #fff!important
}
.conum[data-value]+b {
    display: none
}
.conum[data-value]::after {
    content: attr(data-value)
}
pre .conum[data-value] {
    position: relative;
    top: -.125rem
}
b.conum * {
    color: inherit!important
}
.conum:not([data-value]):empty {
    display: none
}

.quoteblock {
    padding-left: 1em;
    border-left: 3px solid #ba3925;
}

.stretch {
    width: 100%;
}

